--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,10 @@
   line-height: 1.5;
   font-weight: 400;
 
+  margin-bottom:30px;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+
   
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,20 +17,16 @@
 
 a {
   font-weight: 500;
-  text-decoration: inherit;
+ 
 }
 
 body {
   background-size: cover;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #242424;
+  background: linear-gradient( rgb(250, 229, 208), rgb(255, 255, 255));
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 
 
 
